eros: loading resources dialog

--- a/src/main/resources/assets/minosoft/language/en_us.lang
+++ b/src/main/resources/assets/minosoft/language/en_us.lang
@@ -25,6 +25,8 @@ minosoft:server_info.delete.dialog.description=Do you really want to delete the 
 
 minosoft:connection.dialog.verify_assets.title=Verifying assets... - Minosoft
 minosoft:connection.dialog.verify_assets.header=Verifying and downloading missing assets. This might take a while...
+minosoft:connection.dialog.loading.title=Loading... - Minosoft
+minosoft:connection.dialog.loading.header=Loading all resources to get ready for playing...
 minosoft:connection.dialog.connecting.title=Connecting... - Minosoft
 minosoft:connection.dialog.connecting.header=Connecting...
 minosoft:dialog.starting.title=Starting... - Minosoft
