extend mod manifest, eros: improve mod card

--- a/src/main/resources/assets/minosoft/language/en_us.lang
+++ b/src/main/resources/assets/minosoft/language/en_us.lang
@@ -212,3 +212,4 @@ minosoft:mod.name=Name
 minosoft:mod.description=Description
 minosoft:mod.version=Version
 minosoft:mod.authors=Author(s)
+minosoft:mod.phase=Loading phase
