rework mod sources, argument: mod parameters

--- a/src/main/resources/assets/minosoft/language/en_us.lang
+++ b/src/main/resources/assets/minosoft/language/en_us.lang
@@ -214,7 +214,7 @@ minosoft:mod.authors=Author(s)
 minosoft:mod.website=Website
 minosoft:mod.version=Version
 
-minosoft:mod.path=Path
+minosoft:mod.source=Source
 minosoft:mod.phase=Loading phase
 
 minosoft:mod.depends=Depends
