eros: replace events with observables
This fixes a lot of bugs, also improved memory "safety"

--- a/src/main/resources/assets/minosoft/language/en_us.lang
+++ b/src/main/resources/assets/minosoft/language/en_us.lang
@@ -17,7 +17,7 @@ minosoft:server_info.real_server_address=Real address
 minosoft:server_info.forced_version=Forced version
 minosoft:server_info.remote_version=Remote version
 minosoft:server_info.remote_brand=Remote brand
-minosoft:server_info.active_connections=Active connections
+minosoft:server_info.active_connections=Connected
 minosoft:server_info.players_online=Players online
 minosoft:server_info.ping=Latency
 minosoft:server_info.delete.dialog.description=Do you really want to delete the server %1$s (%2$s)?
